[gd_scene load_steps=2 format=3 uid="uid://c7l1qbst5ge64"]

[ext_resource type="Script" path="res://Projects/Ui/game_over_screen.gd" id="1_bybcn"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bybcn")

[node name="Retry" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -63.0
offset_right = 166.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
text = "Retry"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.5
offset_top = 107.0
offset_right = 166.5
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
